--- a/.gitignore
+++ b/.gitignore
@@ -386,3 +386,8 @@ Runtimes/
 MEMORY_OPTIMIZATION_RECOMMENDATIONS.md
 dashboard-config - Copy.json
 sp_blitz*local*.rdl
+/.claude
+/.claude
+/.claude
+_ul
+$null
